[package]
name = "google-jwt-verify"

version = "0.5.0"
# 0.5.0: pulled request: https://github.com/fuchsnj/google-jwt-verify/pull/10
# 0.4.1 enriched error::Error with more details
# 0.4.0 adopted IdPayload to actual https://developers.google.com/identity/gsi/web/reference/html-reference#server-side
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Yury Bikuzin <yury.bikuzin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
license = "MIT/Apache-2.0"
description = """
A client to verify Google JSON web tokens
"""
edition = "2021"

[features]
default = ["blocking"]
async = ["async-trait", "tokio"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = {version = "0.1", optional = true}
openssl = "0.10"
base64 = "0.13"
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = {version="0.10"}
headers = "0.3"
thiserror = "1"
anyhow = "1"
log = "0.4"
tokio = {version = "1", optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
dotenv = "0.15"
pretty_env_logger = "0.4"
futures = "0.3"
